edev-alibaba-gateway/edev-alibaba-gateway.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: edev-trade-gateway
    project: edev-alibaba-trade
  name: edev-trade-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edev-trade-gateway
  template:
    metadata:
      name: edev-trade-gateway
      labels:
        app: edev-trade-gateway
        project: edev-alibaba-trade
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - edev-trade-gateway
                    - key: "project"
                      operator: In
                      values:
                        - edev-alibaba-trade
                topologyKey: "kubernetes.io/hostname"
      nodeSelector:
        layer: frontend
      containers:
      - name: edev-alibaba-gateway
        image: repository:5000/edev-alibaba-gateway:<VERSION>
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5       #检测失败5次表示未就绪
          initialDelaySeconds: 70   #延迟加载时间
          periodSeconds: 10         #重试时间间隔
          timeoutSeconds: 5         #超时时间设置
          httpGet:
            scheme: HTTP
            port: 9009
            path: /actuator/health
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 100m
            memory: 500Mi
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: edev-trade-gateway
    project: edev-alibaba-trade
  name: edev-trade-gateway
  namespace: default
spec:
  ports:
  - port: 9009
    targetPort: 9009
  selector:
    app: edev-trade-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-edev-trade
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: trade
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edev-trade-gateway
                port:
                  number: 9009
